
0.9.9g Jan 21, 2005
 * fixed --no-dep bug that was excluding requesting package instead of
   installing it
 * fixed recursive dependency bug
 * upped the max size of package requires, suggests token can be ' ' or ',' now
 * moved exclude check for installed version of package about to be updated
   so that packages that where not being upgraded wouldn't show up excluded
 * removed redundant NULL check for available_pkgs and patch_pkgs, added
   free_pkg_list() calls for them in cases where it might not get freed
 * wrapped some open_file() calls in NULL check
 * changed leftover fopen() calls to open_file() wrapper
 * updated format for exclude and suggestions during transaction report
 * rewrote add_suggestion() to use a struct instead of long string
 * formatted transaction report so that package names wrap at 80 chars
 * moved slapt-get from /sbin to /usr/sbin
 * show packages excluded in transaction report when --remove-obsolete hits
   excluded packages
 * changed global_config unsigned integers to bool typedef
 * added bool free_pkgs member to pkg_list struct so all pkg_lists are free'd
   uniformly using free_pkg_list, even if their pkg list is pointers to pkg
   objects in other lists
 * made required, conflicts, and suggests into dynamically allocated strings
   for package objects, and upped their max size to 2048
 * inlined init_pkg()
 * added missing fclose() calls in read_rc_config() and read_head_cache()
 * added missing free for getline buffer in get_md5sum() and update_pkg_cache()
 * fixed exclude parsing regression, adding any trailing commas
 * added --compile script to FAQ, contributed by Piotr Simon
 * added missing free for tmp required_of_required_by pkg_list structure in
   required_by()
 * added missing free_regex() calls in parse_meta_entry()
 * deps of pkg that conflict are now set to remove just like when conflicts of
   requested pkg to install are detected
 * fixed bug where conflict of a dep might slip through and allow the requested