@@ -1,5 +1,6 @@
 
 0.9.9g Jan 21, 2005
+ * exclude suggestions if they are already present in current transaction
  * fixed --no-dep bug that was excluding requesting package instead of
    installing it
  * fixed recursive dependency bug
